Add new Java 9 --permit-illegal-access workaround.